<resources>
    <string name="app_name">Lab1_Orekhovskiy</string>
    <string name="time">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="button">button</string>
    <string name="xml_layout">XML Layout</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="plus">+</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">*</string>
    <string name="percent">%</string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_login">Enter login</string>
    <string name="passwordPlaceHolder">********</string>
    <string name="sign_in_btn">sign in</string>
</resources>