<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:autofillHints=""
        android:hint="@string/zero"
        android:inputType="number"
        android:gravity="end"
        android:textSize="150sp"/>

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:rowCount="4"
        android:columnCount="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/one"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/two"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/three"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/plus"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/four"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/five"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/six"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/minus"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/seven"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/eight"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nine"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/mul"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/percent"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/zero"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/clear"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/divide"/>
    </GridLayout>
</LinearLayout>