<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="90sp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/start"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/stop"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/reset"/>
</LinearLayout>