<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="90dp"
        android:textSize="30sp"
        android:text="@string/sign_in"/>
    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/passwordEditText"
        android:layout_marginStart="40dp"
        android:textSize="15sp"
        android:text="@string/password"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_alignStart="@+id/passwordTextView"
        android:textSize="15sp"
        android:text="@string/login"/>
    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginTextView"
        android:layout_toEndOf="@+id/loginTextView"
        android:layout_marginStart="40dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_login"
        android:autofillHints="login"
        android:ems="10"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEditText"
        android:layout_alignStart="@+id/loginEditText"
        android:inputType="textPassword"
        android:hint="@string/passwordPlaceHolder"
        android:autofillHints="password"
        android:ems="10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="30dp"/>
</RelativeLayout>